# RtspTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/rtsp/rtsptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: clientnodemain.cpp
app/src/main/cpp/common/: debug.h
app/src/main/java/com/example/rtsp/rtsptest/: JavaActivity.java  MainActivity.java  P2PCtrl.java
app/src/main/res/layout/: activity_main_new.xml  java_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/rtsp/rtsptest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
